# FlatAero

./: .gitignore  .gitmodules  .travis.yml  README.md  format-files.sh  install.sh  package.json  script.sh  swift.swiftformat
.github/: PULL_REQUEST_TEMPLATE.md
FlatAero/FlatAero/: AppDelegate.swift  ContentView.swift  Info.plist  Logging.swift  logging.fbs  logging_generated.swift  main.swift
FlatAero/FlatAero.xcodeproj/: project.pbxproj
FlatAero/FlatAero.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
FlatAero/FlatAero.xcworkspace/: contents.xcworkspacedata
FlatAero/FlatAero/Base.lproj/: Main.storyboard
FlatAero/FlatAero/C_Link/: FlatAero-Bridging-Header.h  FlatWrapper.swift  Wrapper.h  Wrapper.mm  wrapper.cpp
FlatAero/FlatAero/Controllers/: DecoderViewController.swift  ImportController.swift  ImportFromFileController.swift  ImportFromUintArrayController.swift  MainViewController.swift  TextViewController.swift
FlatAero/FlatAero/Extension/: Colors+extenion.swift  NSView+Constraints.swift  notification+extension.swift
FlatAero/FlatAero/Models/: Errors.swift  ImportableTypes.swift  ImportedData.swift  PlaceHolder.swift  Schema.swift  TypesOfDisplayers.swift
FlatAero/FlatAero/Operations/: ConvertOperation.swift  DecodeOperation.swift  ValidateOperation.swift
FlatAero/FlatAero/Presenter/: DecodeViewPresenter.swift  ImportBinaryPresenter.swift  ImportFBSTextPresenter.swift  ImportPresenter.swift  (+2 more)
FlatAero/FlatAeroTests/: FlatAeroTests.swift  FlatTests.swift
FlatAero/FlatAeroUITests/: FlatAeroUITests.swift
FlatWrapper/FlatWrapper/: FlatWrapper.h  FlatWrapper_objc.h  FlatWrapper_objc.mm  Info.plist
FlatWrapper/FlatWrapper.xcodeproj/: project.pbxproj
FlatWrapper/FlatWrapperTests/: FlatWrapperTests.m
designs/: FlatAero.sketch  icon_flataero.sketch
electron/: index.js  package-lock.json  package.json
flat/: .clang-format  CMakeLists.txt  README.md  build.sh  format-files.sh  remove.sh
flat/src/flat/: JSON.h  flat.cpp  flat.h  flat.hpp  variables.h
flat/tests/: User.fbs  monster.fbs  numbers.fbs  numbers_generated.h  testflat.cpp  user_generated.h
testfiles/: test.mon
(+16 files in other folders)
